Add CLI