@@ -4,10 +4,14 @@ plugins {
 }
 
 dependencies {
+    implementation(libs.clikt)
     testImplementation(kotlin("test"))
 }
 
 application {
     mainClass.set("koto.MainKt")
     applicationName = "koto"
+    applicationDefaultJvmArgs = listOf(
+        "--enable-native-access=ALL-UNNAMED",
+    )
 }
